--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,23 @@
-# Welcome to Jekyll!
+# Permalinks
 #
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# Use of `relative_permalinks` ensures post links from the index work properly.
+permalink:           pretty
 
-# Site settings
-title: Tokyo Trains
-email: contact@jack-alexander.co
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://jack-alexander.github.io/tokyotrains" # the base hostname & protocol for your site
-twitter_username: jackalexander_
-github_username:  jack-alexander
+# Setup
+title:               Tokyo Trains
+tagline:             'A study of colors, shapes & textures found in Japanese train stations.'
+description:         'Tokyo Trains is made by Jack Alexander'
+url:                 http://lanyon.getpoole.com
+baseurl:             ''
+paginate:            5
 
-# Build settings
-markdown: kramdown
+# About/contact
+author:
+  name:              Jack Alexander
+  url:               https://twitter.com/jackalexander_
+  email:             contact@jack-alexander.co
+
+# Custom vars
+version:             1.0.0
+
+gems:                [jekyll-paginate]
